test/integration/bad/for_loops/stanc.expected
  $ ../../../../../install/default/bin/stanc assign_to_loop_var1.stan
Semantic error in 'assign_to_loop_var1.stan', line 5, column 18 to column 19:
   -------------------------------------------------
     3:      array[2] int vs;
     4:      int y;
     5:      for (v in vs) v = 3;
                           ^
     6:      return 0;
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var2.stan
Semantic error in 'assign_to_loop_var2.stan', line 5, column 18 to column 19:
   -------------------------------------------------
     3:      array[2,3] int vs;
     4:      int y;
     5:      for (v in vs) v = 3;
                           ^
     6:      return 0;
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var3.stan
Semantic error in 'assign_to_loop_var3.stan', line 6, column 6 to column 7:
   -------------------------------------------------
     4:      array[2, 3] int vs;
     5:      for (v in vs) {
     6:        v[1] = 0;
               ^
     7:        break;
     8:      }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var4.stan
Semantic error in 'assign_to_loop_var4.stan', line 5, column 6 to column 7:
   -------------------------------------------------
     3:      vector[2] vs;
     4:      for (v in vs) {
     5:        v = 0;
               ^
     6:      }
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var5.stan
Semantic error in 'assign_to_loop_var5.stan', line 5, column 6 to column 7:
   -------------------------------------------------
     3:      row_vector[2] vs;
     4:      for (v in vs) {
     5:        v = 3.2;
               ^
     6:      }
     7:    }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var6.stan
Semantic error in 'assign_to_loop_var6.stan', line 4, column 4 to column 5:
   -------------------------------------------------
     2:    vector[2] vs;
     3:    for (v in vs) {
     4:      v = 3.2;
             ^
     5:    }
     6:  }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc assign_to_loop_var7.stan
Semantic error in 'assign_to_loop_var7.stan', line 4, column 4 to column 5:
   -------------------------------------------------
     2:    matrix[2, 2] vs;
     3:    for (v in vs) {
     4:      v[1] = 3.2;
             ^
     5:    }
     6:  }
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc for_statements_bad_indices0.stan
Semantic error in 'for_statements_bad_indices0.stan', line 5, column 20 to column 21:
   -------------------------------------------------
     3:      while (1) {
     4:        array[2] int vs;
     5:        for (v in vs) v = 3.2;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc for_statements_bad_indices1.stan
Semantic error in 'for_statements_bad_indices1.stan', line 5, column 20 to column 21:
   -------------------------------------------------
     3:      while (1) {
     4:        array[2] int vs;
     5:        for (v in vs) v[2] = 3;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc for_statements_bad_indices2.stan
Semantic error in 'for_statements_bad_indices2.stan', line 5, column 20 to column 21:
   -------------------------------------------------
     3:      while (1) {
     4:        array[2,3] int vs;
     5:        for (v in vs) v = 3;
                             ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Cannot assign to function argument or loop identifier "v".
[exit 1]
  $ ../../../../../install/default/bin/stanc for_statements_bad_indices3.stan
Semantic error in 'for_statements_bad_indices3.stan', line 5, column 16 to column 18:
   -------------------------------------------------
     3:      while (1) {
     4:        int xx = 3;
     5:        for (i in xx) continue;
                         ^
     6:      }
     7:      return 0;
   -------------------------------------------------

Foreach-loop must be over array, vector, row_vector, or matrix.
Instead found type int.
[exit 1]
  $ ../../../../../install/default/bin/stanc for_statements_bad_indices4.stan
Semantic error in 'for_statements_bad_indices4.stan', line 6, column 18 to column 19:
   -------------------------------------------------
     4:        matrix[2,3] vs;
     5:        for (v in vs) {
     6:          for (a in v) continue;
                           ^
     7:        }
     8:      }
   -------------------------------------------------

Foreach-loop must be over array, vector, row_vector, or matrix.
Instead found type real.
[exit 1]
  $ ../../../../../install/default/bin/stanc name_in_use.stan
Semantic error in 'name_in_use.stan', line 7, column 7 to column 10:
   -------------------------------------------------
     5:    int foo;
     6:  
     7:    for (foo in 1:N) {
                ^
     8:      print("foo");
     9:    }
   -------------------------------------------------

Identifier "foo" is already in use.
[exit 1]
  $ ../../../../../install/default/bin/stanc name_in_use_foreach.stan
Semantic error in 'name_in_use_foreach.stan', line 7, column 7 to column 10:
   -------------------------------------------------
     5:    int foo;
     6:  
     7:    for (foo in N) {
                ^
     8:      print("foo");
     9:    }
   -------------------------------------------------

Identifier "foo" is already in use.
[exit 1]
  $ ../../../../../install/default/bin/stanc reserved.stan
Semantic error in 'reserved.stan', line 5, column 7 to column 10:
   -------------------------------------------------
     3:  }
     4:  generated quantities {
     5:    for (var in 1:N) {
                ^
     6:      print("foo");
     7:    }
   -------------------------------------------------

Identifier "var" clashes with reserved keyword.
[exit 1]
  $ ../../../../../install/default/bin/stanc reserved_foreach.stan
Semantic error in 'reserved_foreach.stan', line 5, column 7 to column 10:
   -------------------------------------------------
     3:  }
     4:  generated quantities {
     5:    for (var in N) {
                ^
     6:      print("foo");
     7:    }
   -------------------------------------------------

Identifier "var" clashes with reserved keyword.
[exit 1]
